--- a/app/views/tickets/create.js.erb
+++ b/app/views/tickets/create.js.erb
@@ -1,3 +1,5 @@
-alert('ticket built');
 
-$('form.new_ticket input[name^=ticket]').val('')
+$('form.new_ticket input:text[name^=ticket]').val('')
+alert('我們收到您的詢問囉，專業人員即將與您聯繫，謝謝您！');
+
+
