--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,37 +1,108 @@
-<h1>Listing tickets</h1>
+<!doctype html>
+<html>
+<head>
+<!--[if lt IE 9]>
+<script src="/js/html5.js"></script>
+<link rel="stylesheet" href="css/desktop.css">
+<![endif]-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
+<meta name="Robots" content="index,follow"/>
+<meta http-equiv="content-language" content="zh-TW" />
+<title>遠東貸款後台管理系統</title>
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/default.css">
+<link rel="stylesheet" media="screen and (max-width: 543px)" href="css/mobile.css" />
+<link rel="stylesheet" media="screen and (min-width: 544px) and (max-width: 896px)" href="css/tablet.css" />
+<link rel="stylesheet" media="screen and (min-width: 897px)" href="css/desktop.css" />
+<link rel="stylesheet" href="css/custom.css">
+<link rel="stylesheet" href="css/alertify.css" />
+<link rel="stylesheet" href="css/alertify.default.css"/>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Gender</th>
-      <th>Phone</th>
-      <th>Email</th>
-      <th>Quota</th>
-      <th>Status</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+  
+<script type="text/javascript" src="/js/jquery-ui.js"></script>
+<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="/js/jquery-textarea-autogrow.js"></script>
+<script type="text/javascript" src="/js/auto-full-height.min.js"></script>
+<script type="text/javascript" src="/js/alertify.min.js"></script>
+<script type="text/javascript" src="/js/mobile-aside.js"></script>
+<script>
+  $(function() {
+    $( ".preview" ).sortable({
+      placeholder: "highlight"
+    });
+    $( ".preview" ).disableSelection();	
+	
+	$(".button").click(function() {
+		Alertify.log.success("已成功新增文章段落！")
+	});
+	
+	$(".delete a").click(function() {
+		Alertify.dialog.confirm("確定要刪除嗎？", function () {
+    	// user clicked "ok"
+		}, function () {
+    	// user clicked "cancel"
+		});
+	});
+	
+  });
+</script>
+</head>
 
-  <tbody>
-    <% @tickets.each do |ticket| %>
-      <tr>
-        <td><%= ticket.name %></td>
-        <td><%= ticket.gender %></td>
-        <td><%= ticket.phone %></td>
-        <td><%= ticket.email %></td>
-        <td><%= ticket.quota %></td>
-        <td><%= ticket.status %></td>
-        <td><%= link_to 'Show', ticket %></td>
-        <td><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
-        <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<body>
+<header _height="none">
+  <section id="top"> <a id="nav-ctrl"><img src="/images/nav.png"></a>
+    <div class="left">
+      <h1><a href="#">遠東貸款後台管理系統</a></h1>
+    </div>
+    <!--left-->
+    <aside> <a id="aside-ctrl"><img src="/images/set.png"></a>
+      <div id="aside-box"> <a href="<%= logout_tickets_path %>">登出</a> <a href="http://www.summers.com.tw/">返回首頁</a> </div>
+    </aside>
+  </section>
+  <!--top--> 
+</header>
+<section id="main" _height="auto">
+  <nav>
+    <ul>
+      <li class="active"><a href="#" id="nav-1">客戶來信</a></li>
+    </ul>
+  </nav>
+  <article>
+  <section class="list">
+  
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <th align="left" class="x0 x2">日期</th>
+          <th align="left">姓名</th>
+          <th align="left" class="x0">Email</th>
+          <th align="left" class="x2">電話</th>          
+          <th align="left" class="x2">貸款額度</th>
+          <th align="left" class="x0 x1">刪除</th>
+        </tr>
+        
+        
+		<% @tickets.each do |ticket| %>
+        <tr>
+          <td class="x0"><%= ticket.created_at.strftime('%Y-%m-%d') %></td>
+          <td><%= ticket.name %> <%= ticket.gender %></td>
+          <td class="x0"><a href="mailto:<%= ticket.email %>" target="_blank"><%= ticket.email %></a></td>
+          <td ><%= ticket.phone %></td>          
+          <td><%= ticket.quota %></td>
+          <td class="x0"><a href="<%= ticket_path( ticket ) %>" data-method="delete" data-confirm="確定刪除？"><img src="/images/delete.png"></a></td>
+        </tr>
+		<% end %>
+        
+      </table>
+    </section>
+    <!--list-->
+    <%= paginate @tickets %>
+  </article>
+</section>
+<!--main-->
 
-<br>
-
-<%= link_to 'New Ticket', new_ticket_path %>
+<footer _height="none"> Copyright © <a href="http://www.summers.com.tw/" target="_blank">Summers</a> </footer>
+</body>
+</html>
