--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ a:hover{}
 
 /*---------------------------------------------------------------------------------------------------- 頁首 ---*/
 
-header{width:100%;height:93px;background:url(../images/header.jpg) 0 0 repeat-x;position:fixed;top:0;left:0;z-index:100}
+header{width:100%;height:93px;background:url(../images/header.jpg) 0 0 repeat-x;position:fixed;top:0;left:0;z-index:9}
 h1{position:relative;top:35px}
 h1 a{display:block;width:332px;height:42px;background:url(../images/h1.png) 0 0 no-repeat;text-indent:-7777px}
 
@@ -20,7 +20,7 @@ h1 a{display:block;width:332px;height:42px;background:url(../images/h1.png) 0 0 
 nav{background:url(../images/nav.jpg) 0 0 repeat-x;height:49px;width:50%;
 position:absolute;right:0px;bottom:-22px;border:1px solid #111313;border-radius:3px 0 0 3px;
 box-shadow:5px 5px 0 rgba(0,0,0,.1)}
-nav ul{overflow:hidden;border-right:1px solid #404446;width:626px;height:47px;border-radius:3px 0 0 3px}
+nav ul{border-right:1px solid #404446;width:626px;height:47px;border-radius:3px 0 0 3px;position:relative}
 nav li{float:left;width:125px;height:47px;border-right:1px solid #2D3133;border-left:1px solid #404446}
 nav li:first-child{border-left:none}
 nav li a{background:url(../images/nav.jpg) 0 0 repeat-x;display:block;width:100%;height:100%;color:#eee;text-align:center;padding:12px 0 0 0;text-shadow:0 -1px 0 #2D3133}
@@ -30,7 +30,7 @@ nav li a:hover{background:url(../images/navh.jpg) 0 0 repeat-x}
 
 .qa{background:#EAEFF3;position:absolute;width:800px;box-shadow:0 0 10px #333;border-radius:10px;display:none}
 
-#qa-nav{top:80px;right:410px}
+#qa-nav{top:80px;right:36%}
 #qa-nav h3:before{content:" ";display:block;background:url(../images/qa-arr1.png) 0 0 no-repeat;width:28px;height:17px;
 position:absolute;top:-15px;right:70px}
 
@@ -45,25 +45,15 @@ height:102px;text-shadow:-1px 1px 1px #485561;padding:30px 0 0 67px!important;bo
 
 /*---------------------------------------------------------------------------------------------------- 頁身 ---*/
 
-#content{top:93px;width:100%;height:100%;position:relative}
-#content article{width:100%;height:95%;display:table;overflow:hidden;padding:2.5% 0;position:relative}
+#content{top:93px;width:100%;height:100%;position:relative;}
+#content article{width:100%;height:95%;overflow:hidden;padding:2.5% 0;position:relative;display:table}
 #content .vert{display:table-cell; vertical-align:middle}
 #content .anchor{position:absolute;top:-93px;left:0}
-/*#content .wipe{position:absolute!important;top:100%!important}*/
+/*#content .wipe{position:absolute;top:100%}*/
 
 /*---------------------------------------------------------------------------------------------------- 全域 ---*/
 
-#DarkRed{border-top:1px solid #C3222A;text-align:center;position:relative;background:#931E24}
-#DarkRed #wrapper{
-	width: 2000px;
-	height: 1107px;
-	background: url(../images/dr-bg.jpg) center center no-repeat;
-	background-size: cover;
-	position: absolute;
-	top: 0px;
-	left: 1px;
-	z-index: 1
-}
+#DarkRed{border-top:1px solid #C3222A;text-align:center;background: url(../images/dr-bg.jpg) center center no-repeat #931E24}
 #DarkRed .limit{position:relative;z-index:2}
 #DarkRed h3{text-indent:-7777px;background:url(../images/dr-01.png) 0 0 no-repeat;width:1064px;height:148px;margin:0 auto 13% auto}
 
@@ -115,27 +105,27 @@ padding:35px 50px;margin:50px 0 0 0;position:relative;}
 
 /*---------------------------------------------------------------------------------------------------- 融資專案 ---*/
 
-#PaleTurquoise{min-width:1600px!important;background:#93DBC3;position:relative;padding:315px 0 2.5% 0!important}
+#PaleTurquoise{background:#93DBC3;position:relative;padding:315px 0 2.5% 0!important}
 #PaleTurquoise h3{color:#0a7854;font-size:37px;text-align:center;line-height:1.2em;width:100%;height:250px;
 background:url(../images/pt-h3.jpg) center 0 no-repeat;position:absolute;top:0;left:0;padding:58px 0 0 0}
 #PaleTurquoise .dcr{position:absolute}
 #PaleTurquoise #dcr-04{top:310px;right:85%}
 #PaleTurquoise #dcr-05{top:1150px;right:85%}
-#PaleTurquoise #dcr-06{bottom:40px;right:145px}
+#PaleTurquoise #dcr-06{bottom:40px;right:0}
 
-#PaleTurquoise .clear{padding:30px 56px 0 56px;margin:0 0 75px 0;position:relative}
-#PaleTurquoise .left{width:32%}
+#PaleTurquoise .clear{padding:30px 0 0 0;margin:0 auto 75px auto;position:relative;width:920px}
+#PaleTurquoise .left{width:40%}
 #PaleTurquoise .left table{margin:22px 0 0 22px}
 #PaleTurquoise .left th{font-weight:300}
-#PaleTurquoise .right{width:68%;border-top:1px solid #000;margin:23px 0 0 0;background:url(../images/pt-02.png) 25px 125px no-repeat;padding:55px 0 0 60px}
+#PaleTurquoise .right{width:60%;border-top:1px solid #000;margin:23px 0 0 0;background:url(../images/pt-02.png) 25px 125px no-repeat;padding:55px 0 0 60px}
 #PaleTurquoise .right p{font:300 14px 微軟正黑體,"Microsoft JhengHei";color:#222;line-height:2em}
-#PaleTurquoise .right img{position:absolute;top:0px;right:70px}
+#PaleTurquoise .right img{position:absolute;top:0px;right:20px}
 #PaleTurquoise h4{background:url(../images/pt-h4.jpg) 0 0 no-repeat;color:#fff;
 font:300 22px 微軟正黑體,"Microsoft JhengHei";height:51px;text-shadow:-2px 2px 2px #28688F;padding:9px 0 0 25px}
 #PaleTurquoise h4 span{color:#d51919;text-shadow:none;font:900 22px 微軟正黑體,"Microsoft JhengHei";margin:0 0 0 50px}
 #PaleTurquoise h5{color:#0270b3;font:900 16px 微軟正黑體,"Microsoft JhengHei";background:url(../images/pt-03.png) 0 center no-repeat;padding:0 0 0 25px;margin:0 0 15px 0}
 
-/*---------------------------------------------------------------------------------------------------- 聯絡我們 ---*/
+/*---------------------------------------------------------------------------------------------------- 聯絡我們(舊)
 
 #letter{background:url(../images/lt-bg.gif) 0 0 repeat;min-height:930px}
 #letter .lt{position:absolute}
@@ -145,6 +135,20 @@ font:300 22px 微軟正黑體,"Microsoft JhengHei";height:51px;text-shadow:-2px 
 #lt-06{top:56%;left:16%;z-index:2}
 #lt-03{top:50%;left:24%;z-index:3}
 #lt-02{top:50%;left:64%;z-index:3}
+
+/*---------------------------------------------------------------------------------------------------- 聯絡我們 ---*/
+
+#letter{background:#93DBC3}
+#letter .limit{position:relative}
+#form{width:900px;border:20px solid #931111;background:url(../images/lt-15.jpg) 310px center no-repeat #D4D4D4;padding:80px 30px 80px 0px;margin:550px auto 0 auto;position:relative;z-index:5}
+#form .text{width:100%;border:0;background:url(../images/lt-14.jpg) left bottom no-repeat #D4D4D4;padding:5px;color:#062cef}
+#form a{font:900 36px "Arial Black", Gadget, sans-serif;color:#062cef}
+#form .button{background:url(../images/lt-13.jpg) 0 0 no-repeat;width:208px;height:78px;border:0;cursor:pointer}
+#form .button:hover{background:url(../images/lt-13h.jpg) 0 0 no-repeat}
+
+.lt-item{margin:0 auto;position:absolute;}
+#lt-11{z-index:6;top:-50px;right:100px}
+#lt-10{z-index:4;top:-630px;right:-120px}
 
 /*---------------------------------------------------------------------------------------------------- 頁腳 ---*/
 
@@ -160,3 +164,12 @@ footer a:hover{border-bottom:1px solid #fff}
 @-moz-keyframes Rotation {
 0% {-moz-transform:rotate(0deg)}	
 100% {-moz-transform:rotate(720deg)}}
+
+@media screen and (max-width: 1280px){ 
+header{height:60px}
+header h1{top:10px;left:10px}
+nav{left:0px;bottom:-39px;width:100%;height:39px}
+nav ul,nav li{height:37px}
+nav li a{padding:5px 0 0 0}
+nav li a:hover{background:url(../images/navh.jpg) 0 bottom repeat-x}
+ }
