--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -262,8 +262,8 @@
       <!--limit--> </section>
     <!--vert--> 
   </article>
-  <article id="letter" class="wipe">
-    <section class="vert">
+  <article  id="letter" class="wipe">
+    <section id="lt-anchor" class="vert">
     <%= render 'form' %>
       <!--limit--> 
     </section>
