current site name and links

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -55,11 +55,11 @@
 <header _height="none">
   <section id="top"> <a id="nav-ctrl"><img src="/images/nav.png"></a>
     <div class="left">
-      <h1><a href="#">遠東貸款後台管理系統</a></h1>
+      <h1><a href="#">遠東信貸專業團隊客戶訊息系統</a></h1>
     </div>
     <!--left-->
     <aside> <a id="aside-ctrl"><img src="/images/set.png"></a>
-      <div id="aside-box"> <a href="<%= logout_tickets_path %>">登出</a> <a href="http://www.summers.com.tw/">返回首頁</a> </div>
+      <div id="aside-box"> <a href="<%= logout_tickets_path %>">登出</a> <a href="/">返回首頁</a> </div>
     </aside>
   </section>
   <!--top--> 
@@ -67,7 +67,7 @@
 <section id="main" _height="auto">
   <nav>
     <ul>
-      <li class="active"><a href="#" id="nav-1">客戶來信</a></li>
+      <li class="active"><a href="<%= tickets_path %>" id="nav-1">客戶來信</a></li>
     </ul>
   </nav>
   <article>
@@ -103,6 +103,6 @@
 </section>
 <!--main-->
 
-<footer _height="none"> Copyright © <a href="http://www.summers.com.tw/" target="_blank">Summers</a> </footer>
+<footer _height="none"> Copyright © <a href="http://www.iwantmoney.com.tw" target="_blank">遠東信貸專業團隊</a> </footer>
 </body>
 </html>
