--- a/app/views/tickets/login.html.erb
+++ b/app/views/tickets/login.html.erb
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <meta name="Robots" content="index,follow"/>
 <meta http-equiv="content-language" content="zh-TW" />
-<title>夏天廣告後台管理系統</title>
+<title>遠東信貸專業團隊客戶訊息系統</title>
 <link rel="stylesheet" href="/css/reset.css">
 <link rel="stylesheet" href="/css/default.css">
 <link rel="stylesheet" media="screen and (max-width: 543px)" href="/css/mobile.css" />
@@ -54,7 +54,7 @@
 <header _height="none">
   <section id="top"> <a id="nav-ctrl"><img src="/images/nav.png"></a>
     <div class="left">
-      <h1><a href="#">夏天廣告後台管理系統</a></h1>
+      <h1><a href="#">遠東信貸專業團隊客戶訊息系統</a></h1>
     </div>
     <!--left-->
     <aside> <a id="aside-ctrl"><img src="/images/set.png"></a>
@@ -98,7 +98,7 @@
 </section>
 <!--main-->
 
-<footer _height="none"> Copyright © <a href="http://www.summers.com.tw/" target="_blank">Summers</a> </footer>
+<footer _height="none"> Copyright © <a href="http://www.iwantmoney.com.tw" target="_blank">遠東信貸專業團隊</a> </footer>
 </body>
 </html>
 
