current site name and links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -135,7 +135,7 @@ $(document).ready(function(){
         <li><a href="#k-anchor">服務流程</a></li>
         <li><a href="#" id="call-qa-nav">常見問題</a></li>
         <li><a href="#pt-anchor">融資專案</a></li>
-        <li><a href="#letter">聯絡方式</a></li>
+        <li><a href="#form">聯絡方式</a></li>
       </ul>
        <div id="qa-nav" class="qa">
         <h3>中小企業貸款常見問題</h3>
