--- a/app/views/tickets/mobile.html.erb
+++ b/app/views/tickets/mobile.html.erb
@@ -2,39 +2,72 @@
 <html>
 <head>
 <!--[if lt IE 9]>
-<script src="js/html5.js"></script>
+<script src="/js/html5.js"></script>
 <![endif]-->
 <meta charset="utf-8">
 <meta name="Robots" content="NOINDEX, NOFOLLOW"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <title>中小企業貸款專家，遠東貸款授信團隊</title>
 <link rel="image_src" href="http://www.moneybank.idv.tw/images/thumb.jpg">
 <link rel="shortcut icon" href="http://www.moneybank.idv.tw/images/favicon.ico"/>
 <link rel="stylesheet" href="/css/reset.css"/>
 <link rel="stylesheet" href="/css/mobile.css"/>
-<script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/AnchorArt.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
+
+<script src="/js/jquery-1.10.2.min.js"></script>
+<script src="/js/AnchorArt.js"></script>
+<script src="/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	$('#ctrl').click(function(){
-		$('#wrapper').stop().animate({left:150},'easeOutBack')	
-	})	
+		wrapper_open();
+	});	
 	
 	$('#aside a').click(function(){
-		$('#wrapper').stop().animate({left:0},'easeOutBack')	
-	})	
+		wrapper_back();
+	});
 });
+
+function wrapper_open(){
+	$('#wrapper').stop().animate({left:'38%'},'easeOutBack',function(){
+		$(this).animate({
+			opacity:'.5',
+			filter:'opacity(alpha=50)'
+		},750)
+	});
+	
+	$('#top').stop().animate({left:'38%'},'easeOutBack');
+	$(document).click(function(e){
+		if(!$(e.target).is('#ctrl, #ctrl img')) {
+			wrapper_back();
+			$(document).unbind("click");
+		}
+		else if($('#wrapper').position().left>0){
+			wrapper_back();
+			$(document).unbind("click");
+		}
+	});
+}
+
+function wrapper_back(){
+	$('#wrapper').stop().animate({left:'0%'},'easeOutBack');
+	$('#wrapper').css({
+		opacity:'1',
+		filter:'opacity(alpha=100)'
+	});
+	$('#top').stop().animate({left:'0%'},'easeOutBack');
+}
 </script>
+
 </head>
 
 <body>
 <div id="aside">
 <ul>
-<li><a href="#content-2">團隊簡介</a></li>
-<li><a href="#content-3">服務流程</a></li>
-<li><a href="#content-4">融資專案</a></li>
-<li><a href="#content-5">實際案例</a></li>
-<li><a href="#form">聯絡方式</a></li>
+	<li><a href="#content-2">團隊簡介</a></li>
+	<li><a href="#content-3">服務流程</a></li>
+	<li><a href="#content-4">融資專案</a></li>
+	<li><a href="#content-5">實際案例</a></li>
+	<li><a href="#form">聯絡方式</a></li>
 </ul>
 </div>
 <div id="wrapper">
