--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,13 +1,13 @@
 
-html{height:100%}
+html{height:100%;background:url(../images/aside.jpg)}
 body{height:100%}
-#aside{width:150px;position:fixed;height:100%;background:url(../images/aside.jpg);z-index:1;padding:30px 0 0 0}
-#aside li{text-align:center;padding:10px 0}
-#aside a{color:#fff;font-size:18px}
-#wrapper{font:300 23px 微軟正黑體,Microsoft JhengHei;line-height:1.7em;position:relative;z-index:5}
+#aside{width:38%;position:fixed;height:100%;background:url(../images/aside.jpg);z-index:1}
+#aside li{text-align:center;padding:20px 0;border-bottom:1px dashed #555}
+#aside a{color:#fff;font-size:28px}
+#wrapper{font:300 23px 微軟正黑體,Microsoft JhengHei;line-height:1.7em;position:relative;z-index:5;top:73px}
 a{font:300 23px 微軟正黑體,Microsoft JhengHei;text-decoration:none;-webkit-transition:all ease .3s;-moz-transition:all ease .3s}
 
-#top{background:url(../images/mb-03.jpg) 0 0 repeat-x;height:73px;width:100%;padding:20px;position:relative}
+#top{background:url(../images/mb-03.jpg) 0 0 repeat-x;height:73px;width:100%;padding:20px;position:fixed;top:0;left:0;z-index:9}
 #top h1{background:url(../images/mb-02.jpg) 0 0 no-repeat;width:270px;height:32px;margin:0 auto;text-indent:-9999px}
 #ctrl{position:absolute;top:25px;left:25px}
 
