fix mobile style

--- a/app/views/tickets/mobile.html.erb
+++ b/app/views/tickets/mobile.html.erb
@@ -72,13 +72,14 @@ function wrapper_back(){
 </div>
 <div id="wrapper">
   <div id="header">
-    <div id="top"> <a href="#" id="ctrl"><img src="/images/mb-01.png"></a>
+    <div id="top"> 
+      <a href="#" id="ctrl"><img src="/images/mb-01.png"></a>
       <h1>遠東貸款授信團隊</h1>
     </div>
     <div id="banner">
       <h2>幫中小企業貸款成功率<b>90%</b>以上<br>
         <b>全程免費服務</b> </h2>
-      <img src="/images/mb-05.png"> </div>
+      <img style="width: 100%;" src="/images/mb-05.png"> </div>
   </div>
   <div id="article">
     <div id="content-1" class="content">
