fix mobile style

--- a/app/views/tickets/mobile.html.erb
+++ b/app/views/tickets/mobile.html.erb
@@ -73,7 +73,7 @@ function wrapper_back(){
 <div id="wrapper">
   <div id="header">
     <div id="top"> 
-      <a href="#" id="ctrl"><img src="/images/mb-01.png"></a>
+      <a style="display: none;" href="#" id="ctrl"><img src="/images/mb-01.png"></a>
       <h1>遠東貸款授信團隊</h1>
     </div>
     <div id="banner">
@@ -86,9 +86,9 @@ function wrapper_back(){
       <h3>中小企業借錢有三難</h3>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #FC6E51"><img src="/images/mb-06a.jpg"></td>
-          <td width="34%" align="center" valign="middle" style="border-bottom:3px solid #48CFAD;border-left:2px solid #CAE8F3;border-right:2px solid #CAE8F3"><img src="/images/mb-06b.jpg"></td>
-          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #AC92EC"><img src="/images/mb-06c.jpg"></td>
+          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #FC6E51"><img width="82" src="/images/mb-06a.jpg"></td>
+          <td width="34%" align="center" valign="middle" style="border-bottom:3px solid #48CFAD;border-left:2px solid #CAE8F3;border-right:2px solid #CAE8F3"><img width="104" src="/images/mb-06b.jpg"></td>
+          <td width="33%" align="center" valign="middle" style="border-bottom:3px solid #AC92EC"><img width="82" src="/images/mb-06c.jpg"></td>
         </tr>
       </table>
       <p> 其實，合法貸款的管道很多<br>
@@ -99,7 +99,7 @@ function wrapper_back(){
     <div id="content-2" class="content">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td align="center" style="background:#F7F8FC"><img src="/images/mb-07.jpg">
+          <td align="center" style="background:#F7F8FC"><img width="113" src="/images/mb-07.jpg">
             <p><b>貸款高手</b><br>
               全程免費服務</p></td>
           <td><ul>
