--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -15,13 +15,13 @@ float: left;
 margin-top: 4px;}
 
 #banner{background:url(../images/mb-04.jpg) center center no-repeat;background-size:cover;min-height:415px;text-align:center}
-#banner h2{color:#fff;font:900 23px 微軟正黑體,Microsoft JhengHei;text-align:center;padding:40px 0}
+#banner h2{color:#fff;font:900 21px 微軟正黑體,Microsoft JhengHei;text-align:center;padding:40px 0}
 #banner h2 b{font-size:42px}
 
 #article{background:#92DBC3;padding:15px}
 .content{border-radius:5px;margin:0 0 15px 0}
 #content-1{background:#4FC1E9;text-align:center}
-#content-1 h3{font:300 32px 微軟正黑體,Microsoft JhengHei;height:80px;padding:20px 0 0 0}
+#content-1 h3{font:300 29px 微軟正黑體,Microsoft JhengHei;height:80px;padding:20px 0 0 0}
 #content-1 table{background:#F7F8FA}
 #content-1 table td{height:180px}
 #content-1 p{padding:35px 0}
@@ -29,10 +29,10 @@ margin-top: 4px;}
 
 #content-2{border-bottom:3px solid #E3E4E8;background:#fff}
 #content-2 table{}
-#content-2 td{padding:15px 0}
-#content-2 p b{font:300 27px 微軟正黑體,Microsoft JhengHei}
+#content-2 td{padding:15px 0;}
+#content-2 p b{font:300 23px 微軟正黑體,Microsoft JhengHei}
 #content-2 ul{width:200px;margin:0 auto}
-#content-2 li{font-size:19px;padding:0 0 0 30px;background:url(../images/mb-08.jpg) 0 center no-repeat}
+#content-2 li{font-size:16px;padding:0 0 0 30px;background:url(../images/mb-08.jpg) 0 center no-repeat}
 
 #content-3{border-bottom:3px solid #E3E4E8;background:#FFFDF3;text-align:center;padding:25px 0}
 #content-3 p{color:#5f6369}
@@ -42,11 +42,11 @@ margin-top: 4px;}
 #content-4 h3{font:300 32px 微軟正黑體,Microsoft JhengHei;padding:10px 0;background:#4FC1E9;text-align:center}
 #content-4 h4{background:url(../images/mb-10.jpg) 15px center no-repeat #F6F8FA;color:#085e7c;font:300 23px 微軟正黑體,Microsoft JhengHei;padding:10px 0 10px 45px;border-top:1px solid #CFEEE4}
 #content-4 ul{width:320px;margin:20px auto}
-#content-4 li{border-bottom:1px solid #EAEDF1}
+#content-4 li{border-bottom:1px solid #EAEDF1; width: 83%; padding-left: 15px;}
 
 #content-5{background:#FFFFFF;text-align:center;padding:5%}
 #content-5 h3{height:55px;font:900 23px 微軟正黑體,Microsoft JhengHei;color:#177596}
-#content-5 h4{text-align:left;font:300 23px 微軟正黑體,Microsoft JhengHei;}
+#content-5 h4{text-align:left;font:300 22px 微軟正黑體,Microsoft JhengHei;}
 #content-5 p{text-align:left;color:#5a5a5a;font-size:18px;line-height:1.7em}
 #call p{border:1px solid #B2E1F2;text-align:center!important;padding:15px 0}
 #call a{color:#1260f0;font-size:40px}
