fix email issue

--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                   <td colspan="2" align="right"><br>
-                    <input name="" type="submit" class="button" value=""></td>
+                    <input id="ticketSubmit" name="" onclick="$('body').css('cursor','wait'); $(this).hide(); return true;" type="submit" class="button" value=""></td>
                 </tr>
               </table></td>
           </tr>
