--- a/app/views/tickets/create.js.erb
+++ b/app/views/tickets/create.js.erb
@@ -2,4 +2,6 @@
 $('form.new_ticket input:text[name^=ticket]').val('')
 alert('我們收到您的詢問囉，專業人員即將與您聯繫，謝謝您！');
 
+$('body').css('cursor', 'auto')
 
+$('#ticketSubmit').show();
