--- a/app/views/tickets/mobile.html.erb
+++ b/app/views/tickets/mobile.html.erb
@@ -13,7 +13,10 @@
 <link rel="stylesheet" href="/css/reset.css"/>
 <link rel="stylesheet" href="/css/mobile.css"/>
 
-<script src="/js/jquery-1.10.2.min.js"></script>
+   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+
+
 <script src="/js/AnchorArt.js"></script>
 <script src="/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript">
@@ -219,7 +222,7 @@ function wrapper_back(){
             300萬以上</label></td>
         </tr>
       </table>
-      <input name="" type="submit" class="button" value="送出">
+      <input name="" id="ticketSubmit" onclick="$('body').css('cursor','wait'); $(this).hide(); return true;" type="submit" class="button" value="送出">
     
       <% end %>
   
