--- a/app/views/tickets/mobile.html.erb
+++ b/app/views/tickets/mobile.html.erb
@@ -8,8 +8,8 @@
 <meta name="Robots" content="NOINDEX, NOFOLLOW"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <title>中小企業貸款專家，遠東貸款授信團隊</title>
-<link rel="image_src" href="http://www.moneybank.idv.tw/images/thumb.jpg">
-<link rel="shortcut icon" href="http://www.moneybank.idv.tw/images/favicon.ico"/>
+<link rel="image_src" href="http://www.iwantmoney.com.tw/images/thumb.jpg">
+<link rel="shortcut icon" href="http://www.iwantmoney.com.tw/images/favicon.ico"/>
 <link rel="stylesheet" href="/css/reset.css"/>
 <link rel="stylesheet" href="/css/mobile.css"/>
 
