--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,11 +127,10 @@ $(document).ready(function(){
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-44702357-1', 'www.iwantmoney.com.tw');
+  ga('create', 'UA-44702357-1', 'iwantmoney.com.tw');
   ga('send', 'pageview');
 
 </script>
-
  </head>
 
  <body>
